# srt_gen

./: .gitignore  README.md  agent.md  pyproject.toml  setup_env.sh
srt_gen/: __init__.py  __main__.py  cli.py  media.py  models.py  segmentation.py  srt_writer.py  text_cleanup.py
srt_gen/backends/: __init__.py  base.py  local_whisper.py  mlx_whisper.py  openai_api.py  torch_whisper.py
tests/: test_mlx_backend.py  test_text_cleanup.py  test_torch_backend.py
